--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,16 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# Visual Studio Files
+*.sln
+*.exe
+*.suo
+*.pdb
+*.manifest
+*.csproj
+*.cache
+*.config
+
 # Windows shortcuts
 *.lnk
 
